--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
     <title>CV Edmundo</title>
     <meta name="description" content="Hola Bienvenido a mi Portafolio Profesiona,soy edmundo arias">
-    <link rel="canonical" href="">
-    <link rel="stylesheet" href="/assets/favicon.png">
+    <link rel="canonical" href="https://artemides.github.io/portfafolio-edmund/">
+    <link rel="favicon" href="https://artemides.github.io/portfafolio-edmund/assets/favicon.png">
     <meta name="theme-color" content="#d9006">
     <meta name="twitter:card" content="summary">
     <meta property="og:title" name="twitter:title" content="Portafolio CV - edmundo">
-    <meta property="og:image"name="twitter:image" content="/assets/hero-image-home.jpg">
-    <meta property="og:url"name="twitter:url" content="">
+    <meta property="og:image"name="twitter:image" content="https://artemides.github.io/portfafolio-edmund/assets/hero-image-home.jpg">
+    <meta property="og:url"name="twitter:url" content="https://artemides.github.io/portfafolio-edmund">
     <meta property="og:description" name="twitter:description" cotent="Welcome to my Portfolio,I'm edmund so let's inmerse into my page">
     <meta property="og:type" content="website">
     
